// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseRemote parseRemoteActivities should parse NFT Mint 1`] = `
{
  "chainId": 1,
  "descriptor": "1 SomeCollectionName",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [
    "imageUrl",
  ],
  "nonce": 12345,
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Minted",
  "type": "MINT",
}
`;

exports[`parseRemote parseRemoteActivities should parse NFT approval 1`] = `
{
  "chainId": 1,
  "descriptor": "0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [],
  "nonce": 12345,
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Unknown Approval",
  "type": "APPROVE",
}
`;

exports[`parseRemote parseRemoteActivities should parse NFT approval for all 1`] = `
{
  "chainId": 1,
  "descriptor": "0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [],
  "nonce": 12345,
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Unknown Approval",
  "type": "APPROVE",
}
`;

exports[`parseRemote parseRemoteActivities should parse NFT receive 1`] = `
{
  "chainId": 1,
  "currencies": undefined,
  "descriptor": "1 SomeCollectionName from 0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [
    "imageUrl",
  ],
  "nonce": 12345,
  "otherAccount": "0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045",
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Received",
  "type": "RECEIVE",
}
`;

exports[`parseRemote parseRemoteActivities should parse eth wrap 1`] = `
{
  "chainId": 1,
  "currencies": [
    ExtendedEther {
      "chainId": 1,
      "decimals": 18,
      "isNative": true,
      "isToken": false,
      "name": "Ethereum",
      "symbol": "ETH",
    },
    Token {
      "address": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "Wrapped Ether",
      "sellFeeBps": undefined,
      "symbol": "WETH",
    },
  ],
  "descriptor": "100 ETH for 100 WETH",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [
    "https://token-icons.s3.amazonaws.com/eth.png",
    "https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2/logo.png",
  ],
  "nonce": 12345,
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Wrapped",
  "type": "LEND",
}
`;

exports[`parseRemote parseRemoteActivities should parse expired UniswapX order 1`] = `
{
  "chainId": 1,
  "currencies": [
    Token {
      "address": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "DAI",
      "sellFeeBps": undefined,
      "symbol": "DAI",
    },
    Token {
      "address": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "Wrapped Ether",
      "sellFeeBps": undefined,
      "symbol": "WETH",
    },
  ],
  "descriptor": "100 DAI for 200 WETH",
  "from": "someOfferer",
  "hash": "someHash",
  "logos": [
    "someUrl",
    "someUrl",
  ],
  "offchainOrderDetails": {
    "addedTime": 10000,
    "chainId": 1,
    "encodedOrder": undefined,
    "expiry": undefined,
    "id": "someId",
    "offerer": "someOfferer",
    "orderHash": "someHash",
    "status": "expired",
    "swapInfo": {
      "expectedOutputCurrencyAmountRaw": "200000000000000000000",
      "inputCurrencyAmountRaw": "100000000000000000000",
      "inputCurrencyId": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
      "isUniswapXOrder": true,
      "minimumOutputCurrencyAmountRaw": "200000000000000000000",
      "outputCurrencyId": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "settledOutputCurrencyAmountRaw": undefined,
      "tradeType": 0,
      "type": 1,
    },
    "txHash": undefined,
    "type": undefined,
  },
  "prefixIconSrc": "bolt.svg",
  "status": "FAILED",
  "timestamp": 10000,
  "title": "Swap expired",
}
`;

exports[`parseRemote parseRemoteActivities should parse filledUniswapX order 1`] = `
{
  "chainId": 1,
  "currencies": [
    Token {
      "address": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "DAI",
      "sellFeeBps": undefined,
      "symbol": "DAI",
    },
    Token {
      "address": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "Wrapped Ether",
      "sellFeeBps": undefined,
      "symbol": "WETH",
    },
  ],
  "descriptor": "100 DAI for 200 WETH",
  "from": "someOfferer",
  "hash": "someHash",
  "logos": [
    "someUrl",
    "someUrl",
  ],
  "offchainOrderDetails": {
    "addedTime": 10000,
    "chainId": 1,
    "encodedOrder": undefined,
    "expiry": undefined,
    "id": "someId",
    "offerer": "someOfferer",
    "orderHash": "someHash",
    "status": "filled",
    "swapInfo": {
      "expectedOutputCurrencyAmountRaw": "200000000000000000000",
      "inputCurrencyAmountRaw": "100000000000000000000",
      "inputCurrencyId": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
      "isUniswapXOrder": true,
      "minimumOutputCurrencyAmountRaw": "200000000000000000000",
      "outputCurrencyId": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "settledOutputCurrencyAmountRaw": "200000000000000000000",
      "tradeType": 0,
      "type": 1,
    },
    "txHash": "someHash",
    "type": undefined,
  },
  "prefixIconSrc": "bolt.svg",
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Swapped",
}
`;

exports[`parseRemote parseRemoteActivities should parse moonpay purchase 1`] = `
{
  "chainId": 1,
  "currencies": [
    Token {
      "address": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "Wrapped Ether",
      "sellFeeBps": undefined,
      "symbol": "WETH",
    },
  ],
  "descriptor": "100 WETH for 100",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [
    "moonpay.svg",
  ],
  "nonce": 12345,
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Purchased",
  "type": "RECEIVE",
}
`;

exports[`parseRemote parseRemoteActivities should parse nft purchase 1`] = `
{
  "chainId": 1,
  "descriptor": "1 SomeCollectionName",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [
    "imageUrl",
  ],
  "nonce": 12345,
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Bought",
  "type": "SWAP",
}
`;

exports[`parseRemote parseRemoteActivities should parse receive 1`] = `
{
  "chainId": 1,
  "currencies": [
    Token {
      "address": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "Wrapped Ether",
      "sellFeeBps": undefined,
      "symbol": "WETH",
    },
  ],
  "descriptor": "100 WETH from 0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [
    "logoUrl",
  ],
  "nonce": 12345,
  "otherAccount": "0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045",
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Received",
  "type": "RECEIVE",
}
`;

exports[`parseRemote parseRemoteActivities should parse remove liquidity 1`] = `
{
  "chainId": 1,
  "currencies": [
    Token {
      "address": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "Wrapped Ether",
      "sellFeeBps": undefined,
      "symbol": "WETH",
    },
    Token {
      "address": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "DAI",
      "sellFeeBps": undefined,
      "symbol": "DAI",
    },
  ],
  "descriptor": "100 WETH and 100 DAI",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [
    "logoUrl",
    "logoUrl",
  ],
  "nonce": 12345,
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Removed liquidity",
  "type": "RECEIVE",
}
`;

exports[`parseRemote parseRemoteActivities should parse send 1`] = `
{
  "chainId": 1,
  "currencies": [
    Token {
      "address": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "DAI",
      "sellFeeBps": undefined,
      "symbol": "DAI",
    },
  ],
  "descriptor": "100 DAI to 0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [
    "logoUrl",
  ],
  "nonce": 12345,
  "otherAccount": "0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045",
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Sent",
  "type": "SEND",
}
`;

exports[`parseRemote parseRemoteActivities should parse swap 1`] = `
{
  "chainId": 1,
  "currencies": [
    Token {
      "address": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "DAI",
      "sellFeeBps": undefined,
      "symbol": "DAI",
    },
    Token {
      "address": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "Wrapped Ether",
      "sellFeeBps": undefined,
      "symbol": "WETH",
    },
  ],
  "descriptor": "100 DAI for 100 WETH",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [
    "logoUrl",
  ],
  "nonce": 12345,
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Swapped",
  "type": "SWAP",
}
`;

exports[`parseRemote parseRemoteActivities should parse swap order 1`] = `
{
  "chainId": 1,
  "currencies": [
    Token {
      "address": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "DAI",
      "sellFeeBps": undefined,
      "symbol": "DAI",
    },
    Token {
      "address": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "Wrapped Ether",
      "sellFeeBps": undefined,
      "symbol": "WETH",
    },
  ],
  "descriptor": "100 DAI for 100 WETH",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [
    "logoUrl",
  ],
  "nonce": 12345,
  "offchainOrderDetails": {
    "addedTime": 10000,
    "chainId": 1,
    "id": "transactionId",
    "offerer": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
    "orderHash": "someHash",
    "status": "filled",
    "swapInfo": {
      "expectedOutputCurrencyAmountRaw": "100000000000000000000",
      "inputCurrencyAmountRaw": "100000000000000000000",
      "inputCurrencyId": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
      "isUniswapXOrder": true,
      "minimumOutputCurrencyAmountRaw": "100000000000000000000",
      "outputCurrencyId": "0xC02aaA39b223FE8D0A0e5C4F27eAD9083C756Cc2",
      "settledOutputCurrencyAmountRaw": "100000000000000000000",
      "tradeType": 0,
      "type": 1,
    },
    "txHash": "someHash",
  },
  "prefixIconSrc": "bolt.svg",
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Swapped",
  "type": "SWAP_ORDER",
}
`;

exports[`parseRemote parseRemoteActivities should parse token approval 1`] = `
{
  "chainId": 1,
  "currencies": [
    Token {
      "address": "0x6B175474E89094C44Da98b954EedeAC495271d0F",
      "buyFeeBps": undefined,
      "chainId": 1,
      "decimals": 18,
      "isNative": false,
      "isToken": true,
      "name": "DAI",
      "sellFeeBps": undefined,
      "symbol": "DAI",
    },
  ],
  "descriptor": "DAI",
  "from": "0x50EC05ADe8280758E2077fcBC08D878D4aef79C3",
  "hash": "someHash",
  "isSpam": false,
  "logos": [
    "logoUrl",
  ],
  "nonce": 12345,
  "status": "CONFIRMED",
  "timestamp": 10000,
  "title": "Approved",
  "type": "APPROVE",
}
`;
